--- a/app/tsconfig.app.json
+++ b/app/tsconfig.app.json
@@ -22,5 +22,12 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src"]
+  "include": [
+    "types",
+    "src/vite-env.d.ts",
+    "src",
+    "types.ts"
+  ]
+
+
 }
